[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vottun-compliance"
version = "0.1.0"
description = "Python SDK for Vottun AI Compliance (EU AI Act Art. 50)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["httpx"]
authors = [{ name = "Vottun" }]

[project.urls]
Homepage = "https://vottun.com"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

